--- a/games/index.html
+++ b/games/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Undum</title>
+    <title>Prueba juego</title>
     <!-- End of Game Title -->
 
     <!-- Remove this if you don't use the Tangerine font in your
@@ -34,14 +34,14 @@
     <div id="toolbar">
       <!-- Set this to be a small version of the title, for the
            toolbar on mobile devices. -->
-      <h1>Undum</h1>
+      <h1>Juego de prueba</h1>
       <div class="nav">
         <a href="#" class="button" id="menu-button">Menu</a>
       </div>
     </div>
     <ul id="menu">
-      <li><a href="#title, #content_wrapper">Story</a></li>
-      <li><a href="#character_panel">Character</a></li>
+      <li><a href="#title, #content_wrapper">Historia</a></li>
+      <li><a href="#character_panel">Personaje</a></li>
       <li><a href="#info_panel">Info</a></li>
     </ul>
 
@@ -51,23 +51,21 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Undum</h1>
+          <h1>Historia</h1>
           <p>
-            Undum is a pure client-side game framework for narrative
-            interactive fiction. It is designed for HTML&#x200A;5 and
-            CSS&#x200A;3. You can read more and download the source
-            code <a href="http://github.com/idmillington/undum">here</a>.
+           Jueguito que estamos probando jejejeje
           </p>
           <!-- End of Game Background -->
 
           <div class='buttons'>
-            <button id="save">Save</button><button id="erase">Erase</button>
+            <button id="save">Guardar</button><button id="erase">Borrar</button>
           </div>
         </div>
 
         <div id="character_panel" class="tools right">
-          <h1>Character</h1>
+          <h1>Personaje</h1>
           <div id="character">
+            <p>bitcoin</p>
             <div id="character_text">
               <div id="character_text_content"></div>
             </div>
@@ -81,14 +79,14 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>The Undum Tutorial <span class='fancy'>&amp;</span><br>
-              Interactive Example</h1>
-            <h2>by I D Millington</h2>
+            <h1>Pezado de juego que  
+              estamos haciendo</h1>
+            <h2>creado por Guillermo Cámara Castillo</h2>
             <!-- End of Game Title -->
 
             <noscript><p class="noscript_message">This game requires 
               Javascript.</p></noscript>
-            <p class="click_message">click to begin</p>
+            <p class="click_message">click to empezar</p>
           </div>
         </div>
 
@@ -165,28 +163,10 @@
 
       <div id="s_saving">
         <h1>Saving and Loading</h1>
-        <p>The only piece of the UI we haven't talked about is the
-          'Save' and 'Erase' buttons on the left panel. These are only
-          visible if your browser supports client-side data
-          storage. Clicking 'Save' stores your game, so you can pick
-          it up again later. There is currently no 'Load' button, the
-          game loads when the page loads. There is also no way to save
-          multiple games, and select which one you want to play. These
-          are both things I'd like to change in the future.
+        <p>hola
         </p>
         <p>
-          Potentially your game could generate huge amounts of
-          text. And that would be difficult to store client side
-          (there are unpredictable limits), especially when we move
-          towards having multiple save files. So instead Undum saves
-          your character as the list of links you clicked. Loading a
-          save-file consists of playing through your game again,
-          quickly. This is a beneficial approach for debugging too. It
-          means when you're polishing and correcting typos, you can
-          save and load the game and scroll through the transcript to
-          see your corrections. If we saved the text, your save file
-          would have the error in it and you'd have to manually replay
-          the game to see the correction.
+          hola1
         </p>
         <p class='transient'>
           Let's return to the <a href='hub'>topic list</a>.
@@ -204,19 +184,8 @@
       <div id="implicit" class="situation" data-tags="topic"
            data-heading="Implicit Choices" data-display-order="7"
            data-choices="#example">
-        <p>When you're writing an Undum game, you often need certain
-          options to be available only when certain conditions hold. You
-          might have an option to remove a secret panel in a haunted
-          house, but that should only be visible if the character knows
-          where it is. If options are available in lots of situations, it
-          can be very difficult to keep track of what options are
-          allowed, and to produce just the right list of choices.</p>
-        <p>To help with this, Undum can generate a list of situation
-          links for you. It does this in three steps. Firstly, each
-          situation can be given one or more tags, this allows you to
-          easily ask for links to all situations with the 'in-hallway'
-          tag, for example. Secondly, situations can have
-          a <em>canView</em> method, which gets to decide whether that
+        <p>hola3</p>
+        <p>hola4 <em>canView</em> method, which gets to decide whether that
           situation should appear. That method can look at the
           current state of the character to decide whether to appear
           or not. Thirdly, <em>SimpleSituation</em>s have a <em>choices</em>
