--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -40,8 +40,8 @@
       </div>
     </div>
     <ul id="menu">
-      <li><a href="#title, #content_wrapper">Story</a></li>
-      <li><a href="#character_panel">Character</a></li>
+      <li><a href="#title, #content_wrapper">Historia</a></li>
+      <li><a href="#character_panel">Personaje</a></li>
       <li><a href="#info_panel">Info</a></li>
     </ul>
 
@@ -51,22 +51,19 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Undum</h1>
+          <h1>Titulo de la Descripción</h1>
           <p>
-            Undum is a pure client-side game framework for narrative
-            interactive fiction. It is designed for HTML&#x200A;5 and
-            CSS&#x200A;3. You can read more and download the source
-            code <a href="http://github.com/idmillington/undum">here</a>.
+            Descripción juego
           </p>
           <!-- End of Game Background -->
 
           <div class='buttons'>
-            <button id="save">Save</button><button id="erase">Erase</button>
+            <button id="save">Guardar</button><button id="erase">Borrar</button>
           </div>
         </div>
 
         <div id="character_panel" class="tools right">
-          <h1>Character</h1>
+          <h1>Personaje</h1>
           <div id="character">
             <div id="character_text">
               <div id="character_text_content"></div>
@@ -81,14 +78,13 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>The Undum Tutorial <span class='fancy'>&amp;</span><br>
-              Interactive Example</h1>
-            <h2>by I D Millington</h2>
+            <h1>Título del juego</h1>
+            <h2>by Guillermo Cámara Castillo</h2>
             <!-- End of Game Title -->
 
             <noscript><p class="noscript_message">This game requires 
               Javascript.</p></noscript>
-            <p class="click_message">click to begin</p>
+            <p class="click_message">click para empezar</p>
           </div>
         </div>
 
@@ -235,7 +231,6 @@
           this example:</p>
       </div>
     </div>
-
     <!-- Load the libraries we depend on -->
     <script type="text/javascript" src="media/js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="media/js/undum.js"></script>
