--- a/games/tutorial.en.html
+++ b/games/tutorial.en.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Game Title: edit this -->
-    <title>Undum</title>
+    <title>El cumpleaños</title>
     <!-- End of Game Title -->
 
     <!-- Remove this if you don't use the Tangerine font in your
@@ -51,9 +51,12 @@
         <div id="info_panel" class="tools left">
 
           <!-- Game Background: edit this -->
-          <h1>Titulo de la Descripción</h1>
+          <h1>Historia</h1>
           <p>
-            Descripción juego
+            En este juego creado con Undum emprenderás un viaje que comienza 
+            el día de tu cumpleaños, en él, comenzando con la elección de tu regalo tú mismo serás
+            el dueño de tu destino teniendo que escoger entre las diferentes opciones que se te dan.
+            Harás compras, viajarás, quizás tengas que luchar, y mucho más.... Mucha suerte!
           </p>
           <!-- End of Game Background -->
 
@@ -70,7 +73,7 @@
           <div class="label">
 
             <!-- Game Title: edit this -->
-            <h1>Título del juego</h1>
+            <h1>El cumpleaños</h1>
             <h2>by Guillermo Cámara Castillo</h2>
             <!-- End of Game Title -->
 
